# radiant-temperature

./: .gitignore  CLAUDE.md  README.md  commands.md  context.md  environment.yml  pyproject.toml
archive/: bedtime_explainer.html
archive/notes/: aoi.md  input_layers.md  result.md  runbook.md  runpod_handoff.md  sample_validation.md  scenario_results.md
archive/scripts/: 02_download_data.py  04_run_baseline.py  05_build_scenario.py  06_run_scenario.py  07_make_figures.py  08_make_slide_visuals.py  _capture_webapp.py  _compare_to_observations.py  _evaluate_baseline.py  _evaluate_scenarios.py  _inspect_qgis.py  _inspect_web.py  _lib.py  _patch_buildings.py  _pod_setup.sh  _pull_from_pod.sh  _serve_inspector.sh  run_solweig_only.sh
archive/slides/: presentation.html  presentation.md  presentation_full.html
figures/: headline.txt
figures/durham_hayti/: headline.txt
notebooks/: 0_fetch_data.py  1_run_scenarios.py  2_prepare_buildings.py  3_analyze_results.py  analysis.py
notes/: aoi.md  baseline_run.md  decision_log.md  input_layers.md  scenario_design.md
scripts/: 01_env_validate.py  02_download_data.py  03_build_rasters.py  04_run_baseline.py  05_build_scenario.py  06_run_scenario.py  07_make_figures.py  _aoi.py  _inspect_web.py  _lib.py  _patch_buildings.py  _sample_run.py  _sample_run_hrrr.py  _ship_to_pod.sh  run_full_pipeline.sh  run_solweig_only.sh
src/: __init__.py  aoi.py  buildings.py  compare_obs.py  evaluate.py  figures.py  geo.py  inspector.py  inspector_index.html  met.py  scenarios.py  solweig_runner.py
